<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/registrationToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:background="@color/toolBar_color"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:transitionName="actionBar">

        <Button
            android:id="@+id/btn_back_route_activity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/arrow_back"
            android:scaleType="fitXY"
            android:backgroundTint="@color/md_white_1000"
            android:layout_gravity="start|center_horizontal"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/md_white_1000"
            android:text="@string/toolbar_app_title"
            android:textSize="30sp"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_show_route_on_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/show_route"
            style="@style/btn_style"/>

        <Button
            android:id="@+id/btn_left_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/left_feedback"
            style="@style/btn_style"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >



        <TextView
            android:id="@+id/txtView_title_timetable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:text="@string/stations"/>

    </RelativeLayout>


    <ListView
        android:id="@+id/lv_stations"
        android:layout_weight="1"

        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/scroll_container_timetable"
        android:paddingBottom="5dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/do7"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/do12"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/do16"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/after16"/>



            </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lay_container_timetable_first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"/>
          <LinearLayout
            android:id="@+id/lay_container_timetable_second"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"/>
          <LinearLayout
            android:id="@+id/lay_container_timetable_third"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"/>
          <LinearLayout
            android:id="@+id/lay_container_timetable_fourth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"/>


        </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <Button
        android:id="@+id/btn_table_back_to_stations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        style="@style/btn_style"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/back_to_stations"/>

    </LinearLayout>