<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.BaseActivity"
    tools:showIn="@layout/app_bar_base">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchView"
            android:layout_marginRight="10dp"
            android:layout_margin="10dp"
            android:queryHint="@string/find_your_route"
            android:iconifiedByDefault="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@color/btn_default_blue">

                <Button
                    android:id="@+id/btn_trolleybus_table"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/md_white_1000"
                    android:background="@drawable/btn_blue_selector"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/trolleybus" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="right|bottom"
                    android:background="@drawable/trolleybus_icon"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@color/btn_default_blue">

                <Button
                    android:id="@+id/btn_bus_table"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/md_white_1000"
                    android:background="@drawable/btn_blue_selector"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/bus" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="right|bottom"
                    android:background="@drawable/marshrutka_icon"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@color/btn_default_blue">

            <Button
                android:id="@+id/btn_tram_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/md_white_1000"
                android:background="@drawable/btn_blue_selector"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/tram" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="right|bottom"
                    android:background="@drawable/tramvay_icon"/>
            </FrameLayout>



        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
